# stremio-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  GET_AUTH_KEY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  server.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: examples.md  releasing.md  stremio-auth-key.md
src/: stremio_mcp.py
tests/: test_stremio_mcp.py
