[project]
name = "stremio-mcp-server"
version = "1.0.0"
description = "MCP server for controlling Stremio on Android TV via ADB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "stremio", "android-tv", "adb", "remote-control"]
authors = [
    { name = "netixc" }
]

dependencies = [
    "mcp>=1.28.1",
    "adb-shell>=0.4.4",
    "pycryptodome>=3.19.0",
    "requests>=2.33.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/netixc/stremio-mcp"
Repository = "https://github.com/netixc/stremio-mcp"
Issues = "https://github.com/netixc/stremio-mcp/issues"

[dependency-groups]
dev = []
