[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "stremio-mcp-server"
version = "0.2.0"
description = "MCP server for controlling Stremio on Android TV via ADB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "stremio", "android-tv", "adb", "remote-control"]
authors = [
    { name = "netixc" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.28.1,<2",
]

[project.scripts]
stremio-mcp = "stremio_mcp:cli"
stremio-mcp-server = "stremio_mcp:cli"

[project.urls]
Homepage = "https://github.com/netixc/stremio-mcp"
Documentation = "https://github.com/netixc/stremio-mcp#readme"
Repository = "https://github.com/netixc/stremio-mcp"
Issues = "https://github.com/netixc/stremio-mcp/issues"
Changelog = "https://github.com/netixc/stremio-mcp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = []
